# serializer version: 1
# name: TestNotificationSettingsUpdate.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestNotificationSettingsUpdate.test_success
  dict({
    'message': 'Notification settings updated',
    'success': True,
  })
# ---
# name: TestNotificationSettingsUpdate.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestNotificationSettingsUpdate.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
